# tactic

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: Dockerfile  alembic.ini  bot.py  ioc.py  requirements.txt
src/application/common/: use_case.py
src/application/create_user/: use_case.py
src/clean_architecture_app/: ioc.py
src/clean_architecture_app/application/common/: interfaces.py  repositories.py  use_case.py
src/clean_architecture_app/application/create_user/: dto.py  use_case.py
src/clean_architecture_app/domain/entities/: user.py
src/clean_architecture_app/domain/services/: user.py
src/clean_architecture_app/domain/value_objects/: user.py
src/clean_architecture_app/infrastructure/: config_loader.py
src/clean_architecture_app/infrastructure/db/: main.py  models.py  uow.py
src/clean_architecture_app/main/: bot.py  ioc.py
src/clean_architecture_app/presentation/: interactor_factory.py
src/clean_architecture_app/presentation/telegram/: __init__.py
src/domain/services/: user.py
src/infrastructure/: config_loader.py
src/infrastructure/db/: models.py  uow.py
src/infrastructure/db/repositories/: user.py
src/presentation/: interactor_factory.py
src/presentation/telegram/: states.py
src/presentation/telegram/new_user/: dialog.py
src/tactic/application/: create_user.py
src/tactic/application/common/: interactor.py  repositories.py  uow.py
src/tactic/infrastructure/: config_loader.py
src/tactic/presentation/: bot.py  interactor_factory.py  ioc.py
(+20 files in other folders)
